fix: Decouple JiraIssueService from IProject so we can test the connection correctly